task_2/ingress-regular.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ingress.class: nginx
  name: ingress-echo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echo-v1
                port:
                  number: 80
